src/app.css
:root {
  --color-primary: #111;
  --text-light: #fff;
  --text-gray: #ccbda8;
  --color-gray-dark: #262626;
  --ff-Montserrat: "Montserrat", "Poppins", sans-serif;
  --bg-blue: #2563eb;
}

body {
  background-color: var(--color-primary);
  color: var(--text-light);
  font-family: var(--ff-Montserrat);
  height: 100%;
  overflow-x: hidden;
}

.light-theme {
  --color-primary: whitesmoke;
  --text-light: #111;
  /*--bg-blue: hsla(0, 0%, 91%, 0.5);*/
  --color-gray-dark: hsla(0, 13%, 75%, 0.432);
  --text-gray: #000;
}

*::before,
*::after,
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

::-webkit-scrollbar {
  width: 5px;
}

.primary-navigation {
  padding: 1.2rem 3%;
  display: flex;
  background-color: var(--color-primary);
  z-index: 3000;

  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  align-items: center;
  justify-content: space-between;
}

.icon-wrapper {
  background-color: var(--color-gray-dark);
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 20px;
  height: 40px;
  width: 40px;
}

.icon-wrapper svg {
  width: 30px;
}

main {
  max-width: 1100px;
  margin: 1rem auto;
  min-height: 90vh;
  margin-bottom: 0;
  display: flex;
  flex-direction: column;
  gap: 5rem;
}

.chat-container {
  padding: 1rem;
  position: relative;
  z-index: 1000;
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  padding-bottom: 4rem;
  overflow-y: auto;
  margin-top: 5rem;
  max-height: 65vh;
}
.odd {
  background-color: var(--bg-blue);
  padding: 0.9rem 1.6rem;
  border-radius: 10px;
  font-size: 0.8rem;
  align-self: flex-end;
  line-height: 1.6;
}

.even {
  background-color: var(--color-gray-dark);
  padding: 0.6rem 1.6rem;
  border-radius: 10px;
  font-size: 0.8rem;
  align-self: flex-start;

  line-height: 1.6;
}

.message-container {
  background-color: var(--color-primary);
  position: fixed;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 1rem 5%;
  z-index: 9999;
}

.message-box {
  background-color: var(--color-gray-dark);
  max-width: 700px;
  padding: 0.5rem;
  margin: 0 auto;
  border-radius: 20px;
  position: relative;
  border: 1px solid var(--color-gray-dark);
  max-height: 100px;
  position: relative;
}

textarea {
  width: 100%;
  overflow: auto;
  min-height: 70px;
  max-width: 100%;
  max-height: 100%;
  padding: 0.5rem;
  border: none;
  outline: None;
  border-radius: 20px;
  background-color: transparent;
  font-family: inherit;
  padding-right: 6rem;
  resize: none;
  color: var(--text-light);
}

.message-btn {
  padding: 0.4rem 1rem;
  position: absolute;
  right: 10px;
  bottom: 15px;
  border: none;
  border-radius: 12px;
  margin-right: auto;
  display: block;
  cursor: pointer;
  background-color: var(--text-light);
  color: var(--color-primary);
  font-weight: 800;
}

.warning-text {
  text-align: center;
  font-size: 0.8rem;
  color: var(--bg-blue);
  font-weight: 600;
  margin: 1rem 0;
}

.warning-text > a {
  color: var(--text-light);
  text-decoration: none;
}

#geminiForm label {
  display: none;
}

.trademark-text {
  color: var(--text-light);
}

@media screen and (max-width: 578px) {
  .odd {
    margin-left: 0;
  }
}

